force-app/main/default/objects/Utility_Enrollment_Response__c/Utility_Enrollment_Response__c.object-meta.xml
<CustomObject>
    <description>response from enrollments sent to a utility.  currently supported utility is NIPSCO</description>
    <label>Utility Enrollment Response</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility Enrollment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>