force-app/main/default/objects/Utility_Enrollment_Response__c/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <length>2</length>
    <type>Text</type>
</CustomField>