force-app/main/default/objects/Utility_Enrollment_Response__c/fields/Error_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Error_Code_1__c</fullName>
    <label>Error Code 1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>