force-app/main/default/objects/Utility_Enrollment_Response__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <description>may be changed by utility, or not provided at all in a file</description>
    <inlineHelpText>may be changed by utility, or not provided at all in a file</inlineHelpText>
    <label>Meter Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>