force-app/main/default/objects/Utility_Enrollment_Response__c/fields/New_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Number__c</fullName>
    <description>comes from the New Service Account ID.  only populated if the number is changed by the utility</description>
    <inlineHelpText>comes from the New Service Account ID.  only populated if the number is changed by the utility</inlineHelpText>
    <label>New Account Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>