force-app/main/default/objects/Utility_Enrollment_Response__c/fields/New_Transport_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Transport_ID__c</fullName>
    <description>only provided by utility if it changes.  new customer account id field</description>
    <inlineHelpText>only provided by utility if it changes.  new customer account id field</inlineHelpText>
    <label>New Transport ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>