force-app/main/default/objects/Utility_Enrollment_Response__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Utility Enrollment Responses</relationshipLabel>
    <relationshipName>Utility_Enrollment_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>