force-app/main/default/objects/Utility_Enrollment_Response__c/fields/Remove_Reason__c.field-meta.xml
<CustomField>
    <fullName>Remove_Reason__c</fullName>
    <label>Remove Reason</label>
    <length>2</length>
    <type>Text</type>
</CustomField>