force-app/main/default/objects/Utility_Enrollment_Response__c/fields/Service_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Status__c</fullName>
    <label>Service Account Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>