force-app/main/default/objects/Utility_Enrollment_Response__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Utility Enrollment Responses</relationshipLabel>
    <relationshipName>Utility_Enrollment_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>