force-app/main/default/objects/Utility_Enrollment_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Utility__c</columns>
    <columns>Premise__c</columns>
    <columns>Type__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Pool_ID__c</columns>
    <columns>File_Name__c</columns>
    <columns>Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>