force-app/main/default/objects/Utility_Enrollment_Response__c/listViews/All_NIPSCO.listView-meta.xml
<ListView>
    <fullName>All_NIPSCO</fullName>
    <columns>NAME</columns>
    <columns>Utility__c</columns>
    <columns>Premise__c</columns>
    <columns>Type__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Pool_ID__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>File_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Utility__c</field>
        <operation>equals</operation>
        <value>NIPSCO</value>
    </filters>
    <label>All NIPSCO Responses</label>
</ListView>